@@ -1,7 +1,7 @@
 package com.gsg.gamersync.service;
 
-import com.gsg.gamersync.entity.Genre;
 import com.gsg.gamersync.entity.GenreTitle;
+import com.gsg.gamersync.entity.view.GenreView;
 import com.gsg.gamersync.repository.GenreRepository;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
@@ -9,7 +9,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor(onConstructor_ = {@Autowired})
@@ -17,11 +17,13 @@ public class GenreService {
     private final GenreRepository genreRepository;
 
     @PostConstruct
-    private void addAllAvailableGenres() {
-        genreRepository.saveAll(Arrays.stream(GenreTitle.values())
-                .map(Genre::new)
-                .filter(genre -> genreRepository.findAll().stream().noneMatch(g -> g.getTitle().equals(genre.getTitle())))
-                .collect(Collectors.toList()));
+    public void updateAllAvailableGenres() {
+        genreRepository.findAllGenres().stream().filter(genreView ->
+                !Arrays.stream(GenreTitle.values()).map(Enum::name).toList().contains(genreView.getTitle())).map(GenreView::getId).forEach(genreRepository::castDelete);
+//        genreRepository.saveAll(Arrays.stream(GenreTitle.values())
+//                .map(Genre::new)
+//                .filter(genre -> genreRepository.findAll().stream().noneMatch(g -> g.getTitle().equals(genre.getTitle())))
+//                .collect(Collectors.toList()));
     }
 }
 
